--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,9 @@ EMAIL ID- SANSKAR0703@GMAIL.COM
 <button class="btn three">Rules</button>
 <button class="btn four">EULA</button>
 </div>
+	<div style="position:relative;top:40vh;left:30vw;">
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/NOYKH_H9gv8?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</div>	
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <!-- <script>
   setTimeout(function(){
